--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -2,7 +2,9 @@
 
 .nav-container {
     display: flex;
+    flex-direction: column;
     justify-content: flex-end;
+    align-items: flex-end;
     min-height: 100%;
 
     nav {
@@ -13,6 +15,8 @@
         width: 3rem;
         height: 3rem;
         padding: 0.5rem;
+        position: relative;
+        z-index: 5;
 
         svg {
             width: 80%;
@@ -29,4 +33,34 @@
 
 #hamburger_check:checked ~ nav {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    top: 0;
+    z-index: 4;
+    width: 100vw;
+    height: 100vh;
+    background-color: #000;
+
+    div {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border-bottom: 1px solid #282828;
+        padding: 1rem;
+    }
+
+    a {
+        text-decoration: none;
+        color: #909096;
+    }
+
+    #first_element {
+        border-top: 1px solid #282828;
+        margin-top: 4rem;
+    }
+
+    .link_focus {
+        color: red;
+    }
 }
