--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,8 +5,10 @@ body, html {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
   background: $background;
   color: $color;
+  font-family: $font_family;
 }
 
 #root {
