--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import './var.scss';
+@import './mixins.scss';
 
 body, html {
   height: 100vh;
@@ -25,4 +26,14 @@ body, html {
     background: #000;
   }
 
+}
+
+@include md(desktop) {
+  .container {
+    flex-direction: row;
+  }
+
+  header {
+    min-width: 10%;
+  }
 }
