Add Desktop Nav

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,9 +31,11 @@ body, html {
 @include md(desktop) {
   .container {
     flex-direction: row;
+
+    header {
+      min-width: 10%;
+      background: #181818;
+    }
   }
 
-  header {
-    min-width: 10%;
-  }
 }
