--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -13,6 +13,10 @@
         height: 100%;
     }
 
+    .desktop_nav {
+        display: none;
+    }
+
     label {
         width: 2.5rem;
         height: 2.5rem;
@@ -31,10 +35,88 @@
     }
 
     @include md(desktop) {
-        
+
         label {
             display: none;
         }
+
+        input[type="checkbox"] {
+            display: none;
+        }
+
+        .desktop_nav {
+            display: flex;
+            width: 100%;
+            height: 100vh;
+            flex-direction: column;
+            position: relative;
+
+            div {
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                border-bottom: 1px solid #282828;
+                padding: 1rem 0 1rem 0;
+            }
+
+            a {
+                text-decoration: none;
+                color: #909096;
+            }
+        
+            #first_element {
+                border-top: 1px solid #282828;
+                margin-top: 4rem;
+            }
+        
+            .link_focus {
+                color: red;
+            }
+        
+            .banner {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                background: #000;
+        
+                div {
+                    border-bottom: none;
+                    padding: 0;
+                }
+        
+                .banner_logo {
+                    font-size: 3.8rem;
+                }
+        
+                .banner_name {
+                    font-size: 1.7rem;
+                    padding-bottom: 0.9rem;
+                }
+        
+                .banner_ocuppation {
+                    font-size: 0.9rem;
+                    padding-bottom: 0.9rem;
+                    color: #a5a5a5;
+                }
+            }
+        
+            #social_container {
+                border-bottom: none;
+                position: absolute;
+                bottom: 11rem;
+            }
+            
+            .social_icons {
+                margin-right: 0.7rem;
+            
+                svg {
+                    width: 1.2rem;
+                    height: 1.2rem;
+                }
+            }
+        }
+
     }
 }
 
@@ -116,4 +198,10 @@
         }
     }
 
+}
+
+@include md (desktop) {
+    .nav-container {
+        justify-content: flex-start;
+    }
 }
