--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,6 +1,7 @@
 $background: #1d1d1d;
 $color: #fff;
-$font_family: 'Roboto', sans-serif;;
+$primary: #00DFFC;
+$font_family: 'Roboto', sans-serif;
 
 $media: (
     tablet: 768px,
