--- a/src/styles/components/home_presentation.scss
+++ b/src/styles/components/home_presentation.scss
@@ -1,28 +1,37 @@
 @import '@styles/var.scss';
 
 .presentation_header {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    font-size: 2rem;
-    font-weight: bold;
-    padding-top: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-size: 2rem;
+  font-weight: bold;
+  padding-top: 3.5rem;
 
-    p {
-        display: inline-block;
-    }
+  p {
+    display: inline-block;
+  }
 }
 
-.presentation {
-    margin-top: 2rem;
-    animation: animated-presentation 4s steps(30, end) 7s 1 normal both;
+.presentation, .presentation_btn {
+  margin-top: 2rem;
+  animation: animated-presentation 4s steps(30, end) 7s 1 normal both;
+}
+
+.presentation_btn {
+  background: none;
+  border: 1px solid $primary;
+  color: $primary;
+  margin-top: 2rem;
+  padding: 1rem 2rem 1rem 2rem;
+  font-size: 1rem;
 }
 
 
 .line__1,
 .line__2,
 .line__3 {
-    width: min-content;
+  width: min-content;
   white-space: nowrap;
   overflow: hidden;
   margin: 0;
@@ -47,18 +56,19 @@
 }
 
 .line__3 {
-    border-right: 2px solid $background;
-    
-    animation: animated-text__3 2.5s steps(30, end) 1s 1 normal both,
-      animated-cursor 1200ms steps(30, end) infinite;
-    -webkit-animation-delay: 3.8s;
-    animation-delay: 3.8s;
+  border-right: 2px solid $background;
+
+  animation: animated-text__3 2.5s steps(30, end) 1s 1 normal both,
+    animated-cursor 1200ms steps(30, end) infinite;
+  -webkit-animation-delay: 3.8s;
+  animation-delay: 3.8s;
 }
 
 @keyframes animated-cursor {
   from {
     border-right-color: $background;
   }
+
   to {
     border-right-color: rgba(255, 255, 255, 0.8);
   }
@@ -68,6 +78,7 @@
   from {
     width: 0;
   }
+
   to {
     width: 4.5rem;
   }
@@ -77,26 +88,28 @@
   from {
     width: 0;
   }
+
   to {
     width: 8.2rem;
   }
 }
 
 @keyframes animated-text__3 {
-    from {
-      width: 0;
-    }
-    to {
-      width: 21.2rem;
-    }
+  from {
+    width: 0;
   }
 
-@keyframes animated-presentation {
-    from {
-        opacity: 0;
-    }
+  to {
+    width: 21.2rem;
+  }
+}
 
-    to {
-        opacity: 1;
-    }
+@keyframes animated-presentation {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
