--- a/src/styles/components/nav_bar.scss
+++ b/src/styles/components/nav_bar.scss
@@ -8,7 +8,7 @@
     top: 0;
     z-index: 4;
     width: 100vw;
-    height: 90vh;
+    height: 88vh;
     background-color: $background;
 
     div {
@@ -66,7 +66,8 @@
     #social_container {
         border-bottom: none;
         position: absolute;
-        bottom: 0.4rem;
+        bottom: 1rem;
+        padding: 0;
     }
     
     .social_icons {
