--- a/src/styles/containers/nav.scss
+++ b/src/styles/containers/nav.scss
@@ -106,6 +106,7 @@
                 border-bottom: none;
                 position: absolute;
                 bottom: 11rem;
+                padding: 0;
             }
             
             .social_icons {
