--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -1,5 +1,9 @@
+@import '@styles/var.scss';
+@import '@styles/mixins.scss';
 
 
 .home_container {
-    padding: 1rem;
+    height: 100%;
+    width: 100%;
 }
+
