--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,6 +1,8 @@
 $background: #1d1d1d;
 $color: #fff;
 $primary: #00DFFC;
+$secondary: #909096;
+$terciary: #181818;
 $font_family: 'Roboto', sans-serif;
 
 $media: (
