Change main Styles

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,6 +32,7 @@ p {
 
   main {
     min-height: 90%;
+    padding: 1rem 2rem 0 2rem;
   }
 
 }
@@ -49,6 +50,7 @@ p {
     main {
       min-width: 90%;
       margin-left: 10%;
+      padding: 2rem 3rem 0 4.5rem;
     }
   }
 
