--- a/src/styles/components/skills_presentation.scss
+++ b/src/styles/components/skills_presentation.scss
@@ -9,6 +9,7 @@
 .skills_presentation {
     margin-top: 2rem;
     margin-bottom: 8.5vh;
+    animation: skills-animated-presentation 1s steps(30, end) 1s 1 normal both;
 }
 
 .skills_line__1,
@@ -25,20 +26,20 @@
 .skills_line__1 {
   border-right: 2px solid $background;
 
-  animation: animated-text__1 1.2s steps(30, end) 1s 1 normal both,
-    animated-cursor 250ms steps(30, end) 8;
+  animation: skills-animated-text__1 1s steps(30, end) 1s 1 normal both,
+    skills-animated-cursor 250ms steps(30, end) 8;
 }
 
 .skills_line__2 {
   border-right: 2px solid $background;
 
-  animation: animated-text__2 1.2s steps(30, end) 2s 1 normal both,
-    animated-cursor 1450ms steps(30, end);
+  animation: skills-animated-text__2 1s steps(30, end) 2s 1 normal both,
+    skills-animated-cursor 1450ms steps(30, end);
   -webkit-animation-delay: 1.5s;
   animation-delay: 2.5s;
 }
 
-@keyframes animated-cursor {
+@keyframes skills-animated-cursor {
   from {
     border-right-color: $background;
   }
@@ -48,7 +49,7 @@
   }
 }
 
-@keyframes animated-text__1 {
+@keyframes skills-animated-text__1 {
   from {
     width: 0;
   }
@@ -58,7 +59,7 @@
   }
 }
 
-@keyframes animated-text__2 {
+@keyframes skills-animated-text__2 {
   from {
     width: 0;
   }
@@ -68,7 +69,7 @@
   }
 }
 
-@keyframes animated-presentation {
+@keyframes skills-animated-presentation {
   from {
     opacity: 0;
   }
