--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -3,6 +3,7 @@ $color: #fff;
 $primary: #00DFFC;
 $secondary: #909096;
 $terciary: #181818;
+$fourth:#2a2a2a;
 $font_family: 'Roboto', sans-serif;
 
 $media: (
