--- a/src/styles/components/skills_presentation.scss
+++ b/src/styles/components/skills_presentation.scss
@@ -7,14 +7,22 @@
 }
 
 .skills_presentation {
-    margin-top: 2rem;
-    margin-bottom: 8.5vh;
-    animation: skills-animated-presentation 1s steps(30, end) 1s 1 normal both;
+  margin-top: 2rem;
+  margin-bottom: 8.5vh;
+  animation: skills-animated-presentation 1s steps(30, end) 1s 1 normal both;
 
-    a {
-      text-decoration: none;
-      color: $primary;
-    }
+  a {
+    text-decoration: none;
+    color: $primary;
+  }
+}
+
+.skills_data_container {
+  margin-top: 2rem;
+
+  ul {
+    padding-top: 2vh;
+  }
 }
 
 .skills_line__1,
@@ -81,5 +89,40 @@
 
   to {
     opacity: 1;
+  }
+}
+
+@include md(desktop) {
+  #first_skill_p {
+    margin-top: 3rem;
+  }
+
+  .skills_data_container {
+    width: 30%;
+  }
+
+  .skills_line__1,
+  .skills_line__2 {
+    font-size: 3.5rem;
+  }
+
+  @keyframes skills-animated-text__1 {
+    from {
+      width: 0;
+    }
+  
+    to {
+      width: 21rem;
+    }
+  }
+  
+  @keyframes skills-animated-text__2 {
+    from {
+      width: 0;
+    }
+  
+    to {
+      width: 20.3rem;
+    }
   }
 }
