--- a/src/styles/containers/skills.scss
+++ b/src/styles/containers/skills.scss
@@ -3,6 +3,30 @@
 
 
 .skills_container {
+    display: flex;
+    flex-direction: column;
     height: 100%;
     width: 100%;
+}
+
+@include md (desktop) {
+    main {
+        padding: 0;
+    }
+
+    .skills_container {
+        margin-top: 13vh;
+        height: auto;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+}
+
+@include md (tablet) {
+
+    .skills_container {
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 }
