--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,7 +50,7 @@ p {
     main {
       min-width: 90%;
       margin-left: 10%;
-      padding: 2rem 3rem 0 4.5rem;
+      padding: 0;
     }
   }
 
