Add column prop to DataList

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -48,6 +48,8 @@ p {
     }
 
     main {
+      display: flex;
+      justify-content: center;
       min-width: 90%;
       margin-left: 10%;
       padding: 0;
