--- a/src/styles/components/project_card.scss
+++ b/src/styles/components/project_card.scss
@@ -3,6 +3,9 @@
 @import '@styles/mixins.scss';
 
 .project_card_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background: $fourth;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
@@ -24,7 +27,8 @@
 }
 
 .project_card_img {
-    width: 100%;
+    width: 20rem;
+    height: 15rem;
     object-fit: cover;
     background: $fourth;
 }
