--- a/src/styles/containers/projects.scss
+++ b/src/styles/containers/projects.scss
@@ -1,6 +1,12 @@
 @import '@styles/mixins.scss';
 @import '@styles/var.scss';
 
+.projects_container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+}
+
 .projects  {
     animation: projects-animated-presentation 1s steps(30, end) 1s 1 normal both;
 }
