--- a/src/styles/components/project_card.scss
+++ b/src/styles/components/project_card.scss
@@ -27,14 +27,38 @@
 }
 
 .project_card_img {
-    width: 20rem;
-    height: 15rem;
+    width: 100%;
     object-fit: cover;
     background: $fourth;
+}
+
+.project_info  {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .project_links {
     display: flex;
     justify-content: space-between;
     width: 16.5%;
+}
+
+@include md (desktop) {
+    .project_card_img {
+        width: 20rem;
+        height: 15rem;
+    }
+
+    .project_links {
+        justify-content: space-evenly;
+    }
+}
+
+@include md (tablet) {
+    .project_card_img {
+        width: 20rem;
+        height: 15rem;
+    }
 }
