--- a/src/styles/containers/projects.scss
+++ b/src/styles/containers/projects.scss
@@ -4,7 +4,7 @@
 .projects_container {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 100%;
 }
 
 .projects  {
@@ -20,4 +20,10 @@
       opacity: 1;
     }
   }
-  
+
+@include md (desktop) {
+  .projects_container {
+    margin-top: 13vh;
+    width: 90%;
+  }
+}
