--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -5,6 +5,7 @@ $secondary: #909096;
 $terciary: #181818;
 $fourth:#2a2a2a;
 $font_family: 'Roboto', sans-serif;
+$poppins_font: 'Poppins', 'sans-serif';
 
 $media: (
     tablet: 768px,
