--- a/src/styles/components/home_presentation.scss
+++ b/src/styles/components/home_presentation.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  font-family: $font_family;
   font-size: 2rem;
   font-weight: bold;
   padding-top: 3.5rem;
