--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,7 +9,7 @@ body, html {
   overflow-x: hidden;
   background: $background;
   color: $color;
-  font-family: $font_family;
+  font-family: $poppins_font;
 }
 
 p {
@@ -26,7 +26,7 @@ p {
   flex-direction: column;
 
   header {
-    min-height: 10%;
+    min-width: 100%;
     background: #000;
   }
 
@@ -39,19 +39,16 @@ p {
 
 @include md(desktop) {
   .container {
-    flex-direction: row;
+    flex-direction: column;
 
     header {
       position: fixed;
-      min-width: 15%;
       background: #181818;
     }
 
     main {
       display: flex;
       justify-content: center;
-      min-width: 85%;
-      margin-left: 15%;
       padding: 0;
     }
   }
