--- a/src/styles/components/home_presentation.scss
+++ b/src/styles/components/home_presentation.scss
@@ -30,6 +30,13 @@
   padding: 1rem 3rem 1rem 3rem;
   margin-top: 3rem;
   font-size: 1rem;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.presentation_btn:hover {
+  color: #fff;
+  background: $hover_btn;
+  cursor: pointer;
 }
 
 
