--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -1,6 +1,7 @@
 $background: #1d1d1d;
 $color: #fff;
 $primary: #00DFFC;
+$hover_btn: #00dffcbf;
 $secondary: #909096;
 $terciary: #181818;
 $fourth:#2a2a2a;
