Finish Contact Form Styles

--- a/src/styles/components/nav_bar.scss
+++ b/src/styles/components/nav_bar.scss
@@ -71,7 +71,7 @@
     }
     
     .social_icons {
-        margin-right: 0.7rem;
+        text-align: center;
     
         svg {
             width: 1.5rem;
