--- a/src/styles/components/contact_form.scss
+++ b/src/styles/components/contact_form.scss
@@ -1,4 +1,5 @@
 @import '@styles/var.scss';
+@import '@styles/mixins.scss';
 
 fieldset {
     width: 100%;
@@ -94,4 +95,41 @@ textarea {
     color: #fff;
     background: $hover_btn;
     cursor: pointer;
+}
+
+.form_success {
+    position: absolute;
+    z-index: 8;
+    bottom: 1rem;
+    left: 2.1rem;
+    border: 1px solid $primary;
+    padding: 1rem;
+    background: $background;
+    width: 75vw;
+    text-align: center;
+    animation: form_success 3s 1;
+    opacity: 0;
+}
+
+@keyframes form_success  {
+    0% { opacity: 0;}
+    50% { opacity:  1;}
+    100% { opacity: 0;}
+}
+
+@include md (tablet) {
+    .form_success {
+        bottom: 3.6rem;
+        left: 4.8rem;
+        font-size: 0.8rem;
+        width: auto;
+    }
+}
+
+@include md (desktop) {
+    .form_success {
+        bottom: 2rem;
+        left: 4.8rem;
+        font-size: 1rem;
+    }
 }
