Refactor some styles

--- a/src/styles/containers/project_card.scss
+++ b/src/styles/containers/project_card.scss
@@ -76,6 +76,7 @@
         left: calc(50% - 1.2rem);
         transform: translateX(-50%);
         margin: 0;
+        margin-left: 0.8rem;
         height: 20rem;
     }
 
