--- a/src/styles/components/projects_presentation.scss
+++ b/src/styles/components/projects_presentation.scss
@@ -5,7 +5,8 @@
 .projects_header {
   font-family: $font_family;
   padding-top: 2vh;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  margin-left: 1.4rem;
 }
 
 .projects__line {
@@ -40,5 +41,12 @@
 
   to {
     width: 8.7rem;
+  }
+}
+
+@include md (tablet) {
+  .projects_header {
+    margin-left: 0;
+    padding-top: 0;
   }
 }
