--- a/src/styles/components/skills_presentation.scss
+++ b/src/styles/components/skills_presentation.scss
@@ -4,12 +4,9 @@
 
 .skills_header {
   font-family: $font_family;
-  padding-top: 2vh;
 }
 
 .skills_presentation {
-  margin-top: 2rem;
-  margin-bottom: 8.5vh;
   animation: skills-animated-presentation 1s steps(30, end) 1s 1 normal both;
 
   a {
@@ -19,11 +16,7 @@
 }
 
 .skills_data_container {
-  margin-top: 2rem;
-
-  ul {
-    padding-top: 2vh;
-  }
+  margin-top: 1rem;
 }
 
 .skills_line__1,
@@ -91,6 +84,26 @@
   to {
     opacity: 1;
   }
+}
+
+@include md (tablet) {
+  .skills_header {
+    padding-top: 2vh;
+  }
+
+  .skills_presentation {
+    margin-top: 2rem;
+    margin-bottom: 8.5vh;
+  }
+
+  .skills_data_container {
+    margin-top: 2rem;
+  
+    ul {
+      padding-top: 2vh;
+    }
+  }
+  
 }
 
 @include md(desktop) {
