Add Contact Link in Home

--- a/src/styles/components/home_presentation.scss
+++ b/src/styles/components/home_presentation.scss
@@ -31,12 +31,20 @@
   margin-top: 3rem;
   font-size: 1rem;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+
+  a {
+    color: $primary;
+    text-decoration: none;
+  }
 }
 
 .presentation_btn:hover {
-  color: #fff;
   background: $hover_btn;
   cursor: pointer;
+
+  a {
+    color: #fff;
+  }
 }
 
 
