Remove react icons dependency

--- a/src/styles/containers/nav.scss
+++ b/src/styles/containers/nav.scss
@@ -28,6 +28,7 @@
         svg {
             width: 80%;
             height: 80%;
+            fill: $secondary;
         }
     }
 
@@ -62,6 +63,7 @@
                 text-decoration: none;
                 color: $secondary;
                 height: fit-content;
+
             }
     
         
