--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -16,6 +16,10 @@
     a {
         color: $secondary;
         width: 20%;
+
+        svg {
+            fill : $secondary;
+        }
     }
 }
 
@@ -29,16 +33,17 @@
         justify-content: flex-start;
     }
     
-    .social_icons {
+    #social_container {
+        a {
+            svg {
+                width: 1.2rem;
+                height: 1.2rem;
+            }
     
-        svg {
-            width: 1.2rem;
-            height: 1.2rem;
-        }
-
-        svg:hover {
-            cursor: pointer;
-            color: $primary;
+            svg:hover {
+                cursor: pointer;
+                fill: $primary;
+            }
         }
     }
 }
