Change Home loading Spinner

--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -25,8 +25,18 @@
 
 @include md(desktop) {
     .home_container {
+        display: flex;
+        align-items: center;
         margin-left: 6rem;
         margin-top: 2rem;
+    }
+
+    #moon_svg {
+        margin-top: 9vh;
+        
+        path {
+            border: none;
+        }
     }
 
     #social_container { 
