--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -1,8 +1,11 @@
 @import '@styles/var.scss';
 @import '@styles/mixins.scss';
+@import '@styles/animation.scss';
 
 .home_container {
+    display: flex;
     width: 100%;
+    height: 100%;
 }
 
 #social_container {
@@ -23,9 +26,34 @@
     }
 }
 
+#moon_svg {
+    margin-top: 2rem;
+    animation: animated-presentation 2s steps(30, end) 6s 1 normal both;
+
+    path, circle, ellipse {
+        opacity: 0;
+    }
+}
+
+@include md(tablet) {
+    .home_container {
+        height: 90%;
+    }
+
+    #moon_svg {
+        
+        path, ellipse {
+            opacity: 1;
+        }
+
+        circle {
+            opacity: 0.3;
+        }
+    }
+}
+
 @include md(desktop) {
     .home_container {
-        display: flex;
         align-items: center;
         margin-left: 6rem;
         margin-top: 2rem;
