--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -40,6 +40,10 @@
         height: 90%;
     }
 
+    #social_container {
+        width: 10%;
+    }
+
     #moon_svg {
         
         path, ellipse {
@@ -59,6 +63,10 @@
         margin-top: 2rem;
     }
 
+    #social_container {
+        width: 25%;
+    }
+
     #moon_svg {
         margin-top: 13vh;
         
@@ -66,16 +74,14 @@
             border: none;
         }
     }
-
-    #social_container { 
-        justify-content: flex-start;
-    }
     
     #social_container {
+        justify-content: flex-start;
+
         a {
             svg {
-                width: 1.2rem;
-                height: 1.2rem;
+                width: 1.8rem;
+                height: 1.8rem;
             }
     
             svg:hover {
