--- a/src/styles/components/data_list.scss
+++ b/src/styles/components/data_list.scss
@@ -38,15 +38,13 @@ li {
 @include md (desktop) {
     ul {
         flex-direction: row;
-        flex-wrap: wrap;
-        flex: 4;
+        flex-flow: row wrap;
         row-gap: 1rem;
         column-gap: 1rem;
         width: 100%;
     }
 
     li {
-        width: auto;
-        flex-grow: 1;
+        flex-basis: 30%;
     }
 }
