--- a/src/styles/components/project_text_card.scss
+++ b/src/styles/components/project_text_card.scss
@@ -1,10 +1,12 @@
 @import '@styles/var.scss';
+@import '@styles/mixins.scss';
 
 .project_text {
     clip-path: polygon(0% 100%, 0% -80%, 15% -70%, 17.23% -53.59%, 23% -40%, 27.23% -28.94%, 35% -20%, 41.09% -13.59%, 50% -10%, 58.91% -13.23%, 65% -20%, 72.77% -28.23%, 77% -40%, 82.77% -54.65%, 85% -70%, 100% -80%, 100% 100%);
     -webkit-clip-path: polygon(0% 100%, 0% -80%, 15% -70%, 17.23% -53.59%, 23% -40%, 27.23% -28.94%, 35% -20%, 41.09% -13.59%, 50% -10%, 58.91% -13.23%, 65% -20%, 72.77% -28.23%, 77% -40%, 82.77% -54.65%, 85% -70%, 100% -80%, 100% 100%);
     transition: clip-path 1000ms;
-    height: min-content;
+    font-size: 2.7vw;
+    margin-top: 0.5rem;
 }
 
 .expanded .project_text {
@@ -28,4 +30,17 @@
 
 .body-text {
     padding: 0 1.2rem;
+    max-width: 75ch;
+}
+
+@include md (tablet) {
+    .project_text {
+        font-size: 1.5vw;
+    }
+}
+
+@include md (desktop) {
+    .project_text {
+        font-size: 1vw;
+    }
 }
