--- a/src/styles/containers/project_card.scss
+++ b/src/styles/containers/project_card.scss
@@ -22,7 +22,7 @@
         color: #fff;
 
         svg {
-            color: transparent;
+            fill-opacity: 0;
             width: 1.2rem;
             height: 1.2rem;
         }
@@ -66,11 +66,13 @@
 }
 
 .expanded {
-    height: 25rem;
+    height: auto;
+    padding-bottom: 1.5rem;
     color: #fff;
 
     a {
         svg {
+            fill-opacity: 1;
             color: #fff;
         }
     }
@@ -91,11 +93,7 @@
     }
 
     .project_card_img {
-        height: 14rem;
-    }
-
-    .expanded {
-        height: 27rem;
+        height: 11rem;
     }
 
     .expanded .project_card_img {
@@ -103,12 +101,20 @@
     }
 
     .project_links {
-        width: 16%;
+        width: 35%;
+    }
+
+    .expanded {
+        height: 23rem;
     }
 }
 
 @include md (desktop) {
     .project_links {
         width: 12%;
+    }
+
+    .expanded {
+        height: 26rem;
     }
 }
