--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -27,6 +27,7 @@
 }
 
 #moon_svg {
+    width: 0;
     margin-top: 2rem;
     animation: animated-presentation 2s steps(30, end) 6s 1 normal both;
 
@@ -45,7 +46,7 @@
     }
 
     #moon_svg {
-        
+        width: 693px;
         path, ellipse {
             opacity: 1;
         }
