--- a/src/styles/components/home_presentation.scss
+++ b/src/styles/components/home_presentation.scss
@@ -59,7 +59,7 @@
   white-space: nowrap;
   overflow: hidden;
   margin: -0.2rem;
-  font-size: 1.5rem;
+  font-size: 2rem;
   font-weight: bold;
 }
 
@@ -124,7 +124,7 @@
   }
 
   to {
-
+    width: 105%;
     max-width: 105%;
   }
 }
@@ -137,6 +137,17 @@
   
     to {
       width: 16%;
+    }
+  }
+
+  @keyframes animated-text__3 {
+    from {
+      width: 0;
+    }
+  
+    to {
+      width: 65%;
+      max-width: 65%;
     }
   }
   
