--- a/src/styles/components/home_presentation.scss
+++ b/src/styles/components/home_presentation.scss
@@ -14,6 +14,7 @@
   font-size: 2rem;
   font-weight: bold;
   padding-top: 1rem;
+  width: fit-content;
 
 }
 
@@ -59,8 +60,9 @@
   white-space: nowrap;
   overflow: hidden;
   margin: -0.2rem;
-  font-size: 2rem;
+  font-size: 8vw;
   font-weight: bold;
+  max-width: 75ch;
 }
 
 .line__1 {
@@ -104,7 +106,7 @@
   }
 
   to {
-    width: 28%;
+    width: 24vw;
   }
 }
 
@@ -114,7 +116,7 @@
   }
 
   to {
-    width: 48%;
+    width: 42vw;
   }
 }
 
@@ -124,8 +126,7 @@
   }
 
   to {
-    width: 105%;
-    max-width: 105%;
+    width: 86vw;
   }
 }
 
@@ -136,7 +137,7 @@
     }
   
     to {
-      width: 16%;
+      width: 22%;
     }
   }
 
@@ -146,8 +147,8 @@
     }
   
     to {
-      width: 65%;
-      max-width: 65%;
+      width: 105%;
+      max-width: 105%;
     }
   }
   
