Add Sematics tags

--- a/src/styles/components/nav_bar.scss
+++ b/src/styles/components/nav_bar.scss
@@ -19,6 +19,12 @@
         padding: 1rem;
     }
 
+    section {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+    }
+
     a {
         text-decoration: none;
         color: #909096;
