Add useAnimation in all pages

--- a/src/styles/containers/project_card.scss
+++ b/src/styles/containers/project_card.scss
@@ -116,5 +116,12 @@
 
     .expanded {
         height: 26rem;
+
+        a {
+            svg {
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+        }
     }
 }
