Add dark mode function

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -8,6 +8,14 @@ $fourth:#2a2a2a;
 $font_family: 'Roboto', sans-serif;
 $poppins_font: 'Poppins', 'sans-serif';
 
+$light_background: #fff;
+$light_color: #000;
+$light_primary: #00DFFC;
+$light_hover_btn: #00dffcbf;
+$light_secondary: #909096;
+$light_terciary: #181818;
+$light_fourth:#2a2a2a;
+
 $media: (
     tablet: 768px,
     desktop: 940px,
