--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,27 @@
 @import './var.scss';
 @import './mixins.scss';
 
+:root {
+
+    --background: #{$background};
+    --color: #{$color};
+    --primary: #{$primary};
+    --hover_btn: #{$hover_btn};
+    --secondary:#{$secondary};
+    --terciary: #{$terciary};
+    --fourth: #{$fourth};
+}
+
+body[data-theme = "light" ], html[data-theme = "light" ] {
+    --background: #{$light_background};
+    --color: #{$light_color};
+    --primary: #{$light_primary};
+    --hover_btn: #{$light_hover_btn};
+    --secondary: #{$light_secondary};
+    --terciary: #{$light_terciary};
+    --fourth: #{$light_fourth};
+}
+
 body,
 html {
   height: 100vh;
@@ -8,7 +29,7 @@ html {
   padding: 0;
   box-sizing: border-box;
   overflow-x: hidden;
-  background: $background;
+  background: var(--background);
   color: $color;
   font-family: $poppins_font;
 }
@@ -36,7 +57,7 @@ p {
 
   header {
     min-width: 100%;
-    background: #000;
+    background: $terciary;
   }
 
   main {
@@ -53,7 +74,7 @@ p {
     header {
       position: fixed;
       z-index: 5;
-      background: #181818;
+      background: $terciary;
     }
 
     main {
