--- a/src/styles/components/expanded_icon.scss
+++ b/src/styles/components/expanded_icon.scss
@@ -6,6 +6,7 @@
     transform: rotate(180deg);
     transition: transform 1000ms;
     cursor: pointer;
+    stroke: var(--color)
 }
 
 .expanded .expanded_icon {
