--- a/src/styles/components/experience_card.scss
+++ b/src/styles/components/experience_card.scss
@@ -3,7 +3,7 @@
 @import '@styles/mixins.scss';
 
 .experience_container {
-    background: $fourth;
+    background: var(--fourth);
     padding: 1.5rem;
 
     h3 {
