--- a/src/styles/containers/contact.scss
+++ b/src/styles/containers/contact.scss
@@ -12,6 +12,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    color: var(--color);
 
     animation: contact-animated-presentation 1s steps(30, end) 1s 1 normal both;
 
