--- a/src/styles/containers/presentation.scss
+++ b/src/styles/containers/presentation.scss
@@ -19,7 +19,7 @@
 }
 
 .presentation {
-    color: $secondary;
+    color: var(--secondary);
 }
 
 .presentation,
@@ -30,21 +30,21 @@
 
 .presentation_btn {
     background: none;
-    border: 1px solid $primary;
-    color: $primary;
+    border: 1px solid var(--primary);
+    color: var(--primary);
     padding: 1rem 3rem 1rem 3rem;
     margin-top: 3rem;
     font-size: 1rem;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 
     a {
-        color: $primary;
+        color: var(--primary);
         text-decoration: none;
     }
 }
 
 .presentation_btn:hover {
-    background: $hover_btn;
+    background: var(--hover_btn);
     cursor: pointer;
 
     a {
@@ -63,17 +63,18 @@
     font-size: 8vw;
     font-weight: bold;
     max-width: 75ch;
+    color: var(--color);
 }
 
 .line__1 {
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: animated-text__1 1.2s steps(30, end) 1s 1 normal both,
         animated-cursor 250ms steps(30, end) 8;
 }
 
 .line__2 {
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: animated-text__2 1s steps(30, end) 1s 1 normal both,
         animated-cursor 250ms steps(30, end);
@@ -82,7 +83,7 @@
 }
 
 .line__3 {
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: animated-text__3 2.5s steps(30, end) 1s 1 normal both,
         animated-cursor 1200ms steps(30, end) infinite;
@@ -92,11 +93,11 @@
 
 @keyframes animated-cursor {
     from {
-        border-right-color: $background;
+        border-right-color: var(--background);
     }
 
     to {
-        border-right-color: rgba(255, 255, 255, 0.8);
+        border-right-color: var(--cursor);
     }
 }
 
@@ -144,9 +145,9 @@
     margin: -0.2rem;
     font-size: 2rem;
     font-weight: bold;
-    color: $primary;
+    color: var(--primary);
 
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: projects-animated-text__1 1s steps(30, end) 1s 1 normal both,
         projects-animated-cursor 250ms steps(30, end) 8;
@@ -154,11 +155,11 @@
 
 @keyframes projects-animated-cursor {
     from {
-        border-right-color: $background;
+        border-right-color: var(--background);
     }
 
     to {
-        border-right-color: rgba(255, 255, 255, 0.8);
+        border-right-color: var(--cursor);
     }
 }
 
@@ -185,9 +186,9 @@
     margin: -0.2rem;
     font-size: 2rem;
     font-weight: bold;
-    color: $primary;
+    color: var(--primary);
 
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: contact-animated-text__1 1s steps(30, end) 1s 1 normal both,
         contact-animated-cursor 250ms steps(30, end) 8;
@@ -195,11 +196,11 @@
 
 @keyframes contact-animated-cursor {
     from {
-        border-right-color: $background;
+        border-right-color: var(--background);
     }
 
     to {
-        border-right-color: rgba(255, 255, 255, 0.8);
+        border-right-color: var(--cursor);
     }
 }
 
@@ -219,10 +220,11 @@
 
 .skills_presentation {
     animation: skills-animated-presentation 1s steps(30, end) 1s 1 normal both;
+    color: var(--color);
 
     a {
         text-decoration: none;
-        color: $primary;
+        color: var(--primary);
     }
 }
 
@@ -238,18 +240,18 @@
     margin: -0.2rem;
     font-size: 2rem;
     font-weight: bold;
-    color: $primary;
+    color: var(--primary);
 }
 
 .skills_line__1 {
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: skills-animated-text__1 1s steps(30, end) 1s 1 normal both,
         skills-animated-cursor 250ms steps(30, end) 8;
 }
 
 .skills_line__2 {
-    border-right: 2px solid $background;
+    border-right: 2px solid var(--background);
 
     animation: skills-animated-text__2 1s steps(30, end) 2s 1 normal both,
         skills-animated-cursor 1450ms steps(30, end);
@@ -259,11 +261,11 @@
 
 @keyframes skills-animated-cursor {
     from {
-        border-right-color: $background;
+        border-right-color: var(--background);
     }
 
     to {
-        border-right-color: rgba(255, 255, 255, 0.8);
+        border-right-color: var(--cursor);
     }
 }
 
