--- a/src/styles/containers/project_card.scss
+++ b/src/styles/containers/project_card.scss
@@ -3,7 +3,7 @@
 @import '@styles/mixins.scss';
 
 .project_card_container {
-    background: $fourth;
+    background: var(--fourth);
     height: 18rem;
     padding: 1.5rem;
     margin-bottom: 1.5rem;
@@ -34,7 +34,7 @@
     max-width: 100%;
     height: 12rem;
     object-fit: cover;
-    background: $fourth;
+    background: var(--fourth);
     transform: translateY(3rem);
     transition: transform 1000ms;
 }
@@ -55,7 +55,7 @@
         height: 1.2rem;
 
         path {
-            fill: #fff;
+            fill: var(--color);
             width: 100%;
         }
     }
