--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -5,16 +5,18 @@ $hover_btn: #00dffcbf;
 $secondary: #909096;
 $terciary: #181818;
 $fourth:#2a2a2a;
+$cursor: rgba(255, 255, 255, 0.8);
 $font_family: 'Roboto', sans-serif;
 $poppins_font: 'Poppins', 'sans-serif';
 
-$light_background: #fff;
-$light_color: #000;
-$light_primary: #00DFFC;
-$light_hover_btn: #00dffcbf;
-$light_secondary: #909096;
-$light_terciary: #181818;
-$light_fourth:#2a2a2a;
+$light_background: 	#FFFAFA;
+$light_color: #272727;
+$light_primary: #54BAB9;
+$light_hover_btn: #0097fcd1;
+$light_secondary: #636366;
+$light_terciary: #f9f5f5;
+$light_fourth:#f9f5f5;
+$light_cursor: rgba(0, 0, 0, 0.8);
 
 $media: (
     tablet: 768px,
