Add PortfolioContainer in Contact

--- a/src/styles/containers/contact.scss
+++ b/src/styles/containers/contact.scss
@@ -48,6 +48,10 @@
     .contact_container {
         margin-top: 14vh;
         width: 90%;
+
+        p {
+            max-width: none;
+        }
     }
 
     .edit_input,
