Fix some styles

--- a/src/styles/containers/nav.scss
+++ b/src/styles/containers/nav.scss
@@ -29,6 +29,11 @@
             width: 80%;
             height: 80%;
             fill: var(--secondary);
+
+            path {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 
