--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -18,7 +18,7 @@
 
     a {
         color: var(--secondary);
-        width: 20%;
+        width: 35%;
 
         svg {
             fill : var(--secondary);
@@ -43,6 +43,10 @@
 
     #social_container {
         width: 10%;
+
+        a {
+            width: 40%;
+        }
     }
 
     #moon_svg {
