--- a/src/styles/components/nav_bar.scss
+++ b/src/styles/components/nav_bar.scss
@@ -8,7 +8,7 @@
     top: 0;
     z-index: 4;
     width: 100vw;
-    height: 88vh;
+    height: 92vh;
     background-color: var(--background);
 
     div {
@@ -89,7 +89,7 @@
     #social_container {
         border-bottom: none;
         position: absolute;
-        bottom: 1rem;
+        bottom: 8vh;
         padding: 0;
     }
     
