--- a/src/styles/containers/nav.scss
+++ b/src/styles/containers/nav.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
-    min-height: 100%;
+    height: 100vh;
     background: var(--background);
 
     .hamburger_nav {
