Fix some styles problems

--- a/src/styles/var.scss
+++ b/src/styles/var.scss
@@ -11,7 +11,7 @@ $poppins_font: 'Poppins', 'sans-serif';
 
 $light_background: 	#FFFAFA;
 $light_color: #272727;
-$light_primary: #54BAB9;
+$light_primary: #29706f;
 $light_hover_btn: #0097fcd1;
 $light_secondary: #636366;
 $light_terciary: #f9f5f5;
