--- a/src/styles/containers/home.scss
+++ b/src/styles/containers/home.scss
@@ -18,7 +18,6 @@
 
     a {
         color: var(--secondary);
-        width: 35%;
 
         svg {
             fill : var(--secondary);
@@ -43,10 +42,6 @@
 
     #social_container {
         width: 10%;
-
-        a {
-            width: 40%;
-        }
     }
 
     #moon_svg {
@@ -68,10 +63,6 @@
         margin-top: 2rem;
     }
 
-    #social_container {
-        width: 25%;
-    }
-
     #moon_svg {
         margin-top: 13vh;
         
@@ -81,7 +72,7 @@
     }
     
     #social_container {
-        justify-content: flex-start;
+        justify-content: space-between;
 
         a {
             svg {
