Add padding to mobile nav

--- a/src/styles/components/desktop_nav.scss
+++ b/src/styles/components/desktop_nav.scss
@@ -4,6 +4,7 @@
 @include md (desktop) {
     .nav-container {
         justify-content: flex-start;
+        padding:0;
     }
 
     .desktop_nav {
