--- a/src/styles/containers/nav.scss
+++ b/src/styles/containers/nav.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
+    padding-top: 2rem;
     background: var(--background);
 
     .hamburger_nav {
