--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -1,3 +1,5 @@
+@import '@styles/mixins.scss';
+
 @keyframes animated-presentation {
     from {
         opacity: 0;
@@ -5,5 +7,170 @@
 
     to {
         opacity: 1;
+    }
+}
+
+@keyframes animated-text__1 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 24vw;
+    }
+}
+
+@keyframes animated-text__2 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 42vw;
+    }
+}
+
+@keyframes animated-text__3 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 86vw;
+    }
+}
+
+@keyframes animated-cursor {
+    from {
+        border-right-color: var(--background);
+    }
+
+    to {
+        border-right-color: var(--cursor);
+    }
+}
+
+@keyframes skills-animated-text__1 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 12rem;
+    }
+}
+
+@keyframes skills-animated-text__2 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 10.3rem;
+    }
+}
+
+@keyframes contact-animated-text__1 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 8.7rem;
+    }
+}
+
+@keyframes projects-animated-text__1 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 8.7rem;
+    }
+}
+
+@keyframes projects-animated-text__1 {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 8.7rem;
+    }
+}
+
+@include md(tablet) {
+    @keyframes animated-text__1 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 22%;
+        }
+    }
+
+    @keyframes animated-text__3 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 105%;
+            max-width: 105%;
+        }
+    }
+}
+
+@include md(desktop) {
+    @keyframes animated-text__1 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 9.5rem;
+        }
+    }
+
+    @keyframes animated-text__2 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 17.2rem;
+        }
+    }
+
+    @keyframes animated-text__3 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 42.2rem;
+        }
+    }
+
+    @keyframes skills-animated-text__1 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 21rem;
+        }
+    }
+
+    @keyframes skills-animated-text__2 {
+        from {
+            width: 0;
+        }
+
+        to {
+            width: 20.3rem;
+        }
     }
 }
