--- a/src/styles/containers/presentation.scss
+++ b/src/styles/containers/presentation.scss
@@ -52,7 +52,6 @@
     }
 }
 
-
 .line__1,
 .line__2,
 .line__3 {
@@ -91,46 +90,6 @@
     animation-delay: 3.8s;
 }
 
-@keyframes animated-cursor {
-    from {
-        border-right-color: var(--background);
-    }
-
-    to {
-        border-right-color: var(--cursor);
-    }
-}
-
-@keyframes animated-text__1 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 24vw;
-    }
-}
-
-@keyframes animated-text__2 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 42vw;
-    }
-}
-
-@keyframes animated-text__3 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 86vw;
-    }
-}
-
 .projects_header {
     font-family: $font_family;
     padding-top: 2vh;
@@ -150,27 +109,7 @@
     border-right: 2px solid var(--background);
 
     animation: projects-animated-text__1 1s steps(30, end) 1s 1 normal both,
-        projects-animated-cursor 250ms steps(30, end) 8;
-}
-
-@keyframes projects-animated-cursor {
-    from {
-        border-right-color: var(--background);
-    }
-
-    to {
-        border-right-color: var(--cursor);
-    }
-}
-
-@keyframes projects-animated-text__1 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 8.7rem;
-    }
+        animated-cursor 250ms steps(30, end) 8;
 }
 
 .contact_header {
@@ -191,27 +130,7 @@
     border-right: 2px solid var(--background);
 
     animation: contact-animated-text__1 1s steps(30, end) 1s 1 normal both,
-        contact-animated-cursor 250ms steps(30, end) 8;
-}
-
-@keyframes contact-animated-cursor {
-    from {
-        border-right-color: var(--background);
-    }
-
-    to {
-        border-right-color: var(--cursor);
-    }
-}
-
-@keyframes contact-animated-text__1 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 8.7rem;
-    }
+        animated-cursor 250ms steps(30, end) 8;
 }
 
 .skills_header {
@@ -219,7 +138,7 @@
 }
 
 .skills_presentation {
-    animation: skills-animated-presentation 1s steps(30, end) 1s 1 normal both;
+    animation: animated-presentation 1s steps(30, end) 1s 1 normal both;
     color: var(--color);
 
     a {
@@ -247,80 +166,19 @@
     border-right: 2px solid var(--background);
 
     animation: skills-animated-text__1 1s steps(30, end) 1s 1 normal both,
-        skills-animated-cursor 250ms steps(30, end) 8;
+        animated-cursor 250ms steps(30, end) 8;
 }
 
 .skills_line__2 {
     border-right: 2px solid var(--background);
 
     animation: skills-animated-text__2 1s steps(30, end) 2s 1 normal both,
-        skills-animated-cursor 1450ms steps(30, end);
+        animated-cursor 1450ms steps(30, end);
     -webkit-animation-delay: 1.5s;
     animation-delay: 2.5s;
 }
 
-@keyframes skills-animated-cursor {
-    from {
-        border-right-color: var(--background);
-    }
-
-    to {
-        border-right-color: var(--cursor);
-    }
-}
-
-@keyframes skills-animated-text__1 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 12rem;
-    }
-}
-
-@keyframes skills-animated-text__2 {
-    from {
-        width: 0;
-    }
-
-    to {
-        width: 10.3rem;
-    }
-}
-
-@keyframes skills-animated-presentation {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
 @include md(tablet) {
-    @keyframes animated-text__1 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 22%;
-        }
-    }
-
-    @keyframes animated-text__3 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 105%;
-            max-width: 105%;
-        }
-    }
-
     .projects_header {
         margin-left: 0;
         padding-top: 0;
@@ -346,7 +204,6 @@
 }
 
 @include md(desktop) {
-
     .presentation_container {
         font-weight: 400;
     }
@@ -373,36 +230,6 @@
         max-width: 75ch;
     }
 
-    @keyframes animated-text__1 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 9.5rem;
-        }
-    }
-
-    @keyframes animated-text__2 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 17.2rem;
-        }
-    }
-
-    @keyframes animated-text__3 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 42.2rem;
-        }
-    }
-
     .contact_header {
         padding: 0;
     }
@@ -420,23 +247,4 @@
         font-size: 3.5rem;
     }
 
-    @keyframes skills-animated-text__1 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 21rem;
-        }
-    }
-
-    @keyframes skills-animated-text__2 {
-        from {
-            width: 0;
-        }
-
-        to {
-            width: 20.3rem;
-        }
-    }
 }
