--- a/src/styles/components/contact_form.scss
+++ b/src/styles/components/contact_form.scss
@@ -1,5 +1,6 @@
 @import '@styles/var.scss';
 @import '@styles/mixins.scss';
+@import '@styles/animation.scss';
 
 fieldset {
     width: 100%;
@@ -10,13 +11,14 @@ fieldset {
     padding: 0;
 }
 
-.form_container{
+.form_container {
     width: 100%;
     margin-top: 1rem;
     padding-bottom: 1rem;
 }
 
-.edit_input, .textarea_input{
+.edit_input,
+.textarea_input {
     width: 100%;
     position: relative;
     display: flex;
@@ -25,7 +27,7 @@ fieldset {
     margin-bottom: 5%;
 }
 
-.edit_input input, 
+.edit_input input,
 .textarea_input textarea {
     width: 90%;
     border: solid 1.5px var(--primary);
@@ -34,31 +36,33 @@ fieldset {
     padding: 1rem;
     font-size: 1rem;
     color: $secondary;
-    transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+    transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0.8;
 
     overflow: hidden;
 }
 
-.edit_input label,  
+.edit_input label,
 .textarea_input label {
     position: absolute;
     color: $secondary;
     pointer-events: none;
     transform: translateY(1rem);
-    transition: 150ms cubic-bezier(0.4,0,0.2,1);
+    transition: 150ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.edit_input input:focus, .edit_input input:valid,
-.textarea_input textarea:focus, .textarea_input textarea:valid {
+.edit_input input:focus,
+.edit_input input:valid,
+.textarea_input textarea:focus,
+.textarea_input textarea:valid {
     outline: none;
     border: 1.5px solid var(--primary);
 }
 
-.edit_input input:focus ~ label,
-.edit_input input:valid ~ label,
-.textarea_input textarea:focus ~ label,
-.textarea_input textarea:valid ~ label{
+.edit_input input:focus~label,
+.edit_input input:valid~label,
+.textarea_input textarea:focus~label,
+.textarea_input textarea:valid~label {
     transform: translateY(-50%) scale(0.8);
     background-color: var(--background);
     padding: 0 .2em;
@@ -71,19 +75,20 @@ textarea {
     height: 20vh;
 }
 
-.input input:focus, .edit_input input:focus{
+.input input:focus,
+.edit_input input:focus {
     outline: none;
     opacity: 1;
 }
 
-.button{
+.button {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
     width: 100%;
 }
 
-.button button{
+.button button {
     background: none;
     border: 1px solid var(--primary);
     color: var(--primary);
@@ -111,12 +116,6 @@ textarea {
     text-align: center;
     animation: form_success 3s 1;
     opacity: 0;
-}
-
-@keyframes form_success  {
-    0% { opacity: 0;}
-    50% { opacity:  1;}
-    100% { opacity: 0;}
 }
 
 @include md (tablet) {
