--- a/src/styles/components/loading_spinner.scss
+++ b/src/styles/components/loading_spinner.scss
@@ -1,4 +1,5 @@
 @import '@styles/var.scss';
+@import '@styles/animation.scss';
 
 .ring {
     position: absolute;
@@ -57,24 +58,4 @@
     border-right: 3px solid $primary;
     border-radius: 50%;
     animation: animateC 2s linear infinite;
-}
-
-@keyframes animateC {
-    0% {
-        transform: rotate(0deg);
-    }
-
-    100% {
-        transform: rotate(360deg);
-    }
-}
-
-@keyframes animate {
-    0% {
-        transform: rotate(45deg);
-    }
-
-    100% {
-        transform: rotate(405deg);
-    }
 }
