--- a/src/styles/containers/projects.scss
+++ b/src/styles/containers/projects.scss
@@ -1,5 +1,6 @@
 @import '@styles/mixins.scss';
 @import '@styles/var.scss';
+@import '@styles/animation.scss';
 
 .projects_container {
   display: flex;
@@ -7,19 +8,9 @@
   width: 100%;
 }
 
-.projects  {
-    animation: projects-animated-presentation 1s steps(30, end) 1s 1 normal both;
+.projects {
+  animation: animated-presentation 1s steps(30, end) 1s 1 normal both;
 }
-
-@keyframes projects-animated-presentation {
-    from {
-      opacity: 0;
-    }
-  
-    to {
-      opacity: 1;
-    }
-  }
 
 @include md (desktop) {
   .projects_container {
