--- a/src/styles/not_found.scss
+++ b/src/styles/not_found.scss
@@ -1,12 +1,8 @@
 @import '@styles/mixins.scss';
-
-html {
-    height: 100%;
-}
+@import '@styles/animation.scss';
 
 body {
     background-image: url('@assets/star.svg'), linear-gradient(to bottom, #05007A, #4D007D);
-    height: 100%;
     margin: 0;
     background-attachment: fixed;
     overflow: hidden;
@@ -88,20 +84,6 @@ body {
     right: 24vmin;
     width: 45vmin;
     bottom: 18vmin;
-}
-
-@keyframes floating {
-    from {
-        transform: translateY(0px);
-    }
-
-    65% {
-        transform: translateY(15px);
-    }
-
-    to {
-        transform: translateY(-0px);
-    }
 }
 
 
